# CProcessing

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  base_sketch.cpp  build.sh  extensions.h  hex.h  hexPrinter.h  main.cpp  processing.h  sketch.cpp
examples/: 001.cpp  002.cpp  003.cpp  004.cpp  005.cpp  006.cpp  007.cpp  008.cpp  009.cpp  010.cpp  011.cpp  012.cpp  013.cpp  014.cpp  015.cpp  016.cpp  017.cpp  018.cpp  019.cpp  020.cpp  021.cpp  Readme.md
lib/: ArrayList.h  CMakeLists.txt  Math.h  PArray.h  PColor.h  PConstants.h  PFont.h  PGL.h  PImage.h  PManager.h  PMath.h  PMatrix.h  PShader.h  PShape.h  PSketch.h  PStroker.h  PTime.h  PVector.h  color.h  pGL.h  processing.h  processing_nvg.h
lib/PolyLine2D/: Polyline2D.h
lib/glsl/: def.frag  def.vert
libprocessing/: CMakeLists.txt
libprocessing/cmake/: LinkASSIMP.cmake  LinkGLAD.cmake  LinkGLFW.cmake  LinkGLM.cmake  LinkSTB.cmake
libprocessing/src/: processing.cpp  processing.h
libprocessing/src/backend/: backend.h  shaders.h
libprocessing/src/backend/gl/: gl_backend.cpp  gl_backend.h
